# yawf

./: .gitignore  Dockerfile  README.md  README_EN.md  getinfo.py  hello.py  pyproject.toml  req.txt  requirements.txt  urls.json  urls.txt  yawf.conf  yawf.conf.example  yawf.conf.sample  yawf.py  yawf_bulk.py
core/: constants.py  fuzz_thread.py  fuzzer.py  probe.py  request.py
core/fuzz/: fuzz_thread.py  fuzzer.py
core/probes/: __init__.py  dt.py  fastjson.py  jsonp.py  log4shell.py  rce.py  redirect.py  sqli.py  ssrf.py  xss.py  xxe.py
core/request/: request.py
core/request/dict/: __init__.py  dt.py  lfi.py  rfi.py  sqli.py  xss.py
core/utils/: db.py  request_result.py  shared.py  utils.py
data/: dt_and_ssrf_detect_params.txt  ignore_params.txt  sens_info_keywords.txt
data/payload/: dt.txt  fastjson.txt  log4shell.txt  rce.txt  sqli.txt  ssrf.txt  xss.txt  xxe.txt
probe/: probe.py  prober.py
probe/dict/: dt.txt  rce_fastjson.txt  rce_log4j.txt  sqli.txt  xss.txt  xxe.txt
probe/payload/: dt.txt  fastjson.txt  log4shell.txt  rce_fastjson.txt  rce_log4j.txt  sqli.txt  ssrf.txt  xss.txt  xxe.txt
utils/: constants.py  db.py  request_result.py  shared.py  utils.py
